<resources>
    <string name="app_name">CS639SpringHW3</string>

    <string name="date">Date: </string>
    <string name="student_count">Student Count: </string>
    <string name="add_data">Add Data</string>
    <string name="clear_data">Clear Data</string>
    <string name="date_cannot_be_empty">Date cannot be empty</string>
    <string name="please_enter_the_total_amount_of_students_present">Please enter the total amount of students present</string>
    <string name="please_enter_in_valid_date">Please enter in a valid date. Must follow the format MM/dd/yyyy</string>
    <string name="please_enter_in_a_valid_number_of_students">Please enter in a valid number of students</string>
    <string name="zero">0</string>
    <string name="show_lines">Show Lines</string>
    <string name="highlight_integral">Highlight Integral</string>
    <string name="five">5</string>
    <string name="ten">10</string>
</resources>